<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WelcomeFragment"
    >
    <LinearLayout android:id="@+id/linearLoginPage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_orange_300">
        <TextView android:gravity="start"
            android:id="@+id/txtHelloWelcome"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_74pxv"
            android:layout_width="match_parent"
            android:text="Hello! Welcome to Sprinter."
            style="@style/txtPlayfairDisplayromanbold36" tools:text="@string/msg_hello_welcome"/>
        <FrameLayout android:id="@+id/welcomeLoginButton"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_57pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_174pxv" android:layout_width="@dimen/_253pxh">
            <View
                android:background="@drawable/background2"
                android:id="@+id/viewEllipseOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_57pxv" android:layout_width="@dimen/_253pxh"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="top|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_92pxh"
                android:layout_marginStart="@dimen/_92pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="Login"
                style="@style/txtPlayfairDisplayromansemibold20" tools:text="LOGIN"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/welcomeSignupButton"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_57pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_65pxv" android:layout_width="@dimen/_253pxh">

            <View
                android:id="@+id/viewEllipseTwo"
                android:layout_width="@dimen/_253pxh"
                android:layout_height="@dimen/_57pxv"
                android:layout_gravity="start"
                android:background="@drawable/background2" />

            <TextView android:ellipsize="end"
                android:id="@+id/txtSIGNUP"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginEnd="@dimen/_72pxh"
                android:layout_marginStart="@dimen/_72pxh"
                android:layout_marginTop="@dimen/_17pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="SIGNUP"
                style="@style/txtPlayfairDisplayromansemibold20" tools:text="@string/lbl_sign_up"/>
        </FrameLayout>
    </LinearLayout>
</layout>