...
>
    <LinearLayout android:id="@+id/mainLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_orange_300">
        <FrameLayout
            android:id="@+id/loginFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</layout>
