...
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>

    <!--  Login Things  -->
    <string name="msg_hello_welcome">Hello! Welcome To Sprinter.</string>
    <string name="lbl_login">       LOGIN</string>
    <string name="header_login">Login to Track your Runs</string>
    <string name="header_sign_up">Sign Up to Track your Runs</string>
    <string name="lbl_sign_up">SIGN - UP</string>
    <string name="lbl_back">Back</string>
    <string name="form_lbl_name">Name</string>
    <string name="form_lbl_email">E-Mail</string>
    <string name="form_lbl_password">Password</string>
...
