...
                android:ellipsize="end"
                android:singleLine="true"
                android:text="LOGIN"
                tools:text="@string/lbl_login" />
        </FrameLayout>
        <FrameLayout
            android:id="@+id/loginBackToWelcome"
            android:layout_width="@dimen/_253pxh"
            android:layout_height="@dimen/_57pxv"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_36pxh"
...
